# Sine-Approximation

./: CMakeLists.txt  README.md
src/: main.cpp  matrix.hpp  network.cpp  network.hpp  swarm.cpp  swarm.hpp
